--- a/styles/pages/home/welcoming.scss
+++ b/styles/pages/home/welcoming.scss
@@ -1,11 +1,14 @@
 .home__welcoming {
-	@extend %cover;
+	// @extend %cover;
 
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin-top: 163rem;
+	// position: relative;
+	// align-items: center;
+	// display: flex;
+	// height: 100%;
+	// flex-direction: column;
+	// justify-content: center;
+	// margin-top: 163rem;
+	margin-bottom: 33.9rem;
 }
 
 .home__welcoming__text {
